--- a/res/layout/activity_maps.xml
+++ b/res/layout/activity_maps.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -12,6 +13,19 @@
           android:id="@+id/map"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.MapFragment"/>
+          android:name="com.google.android.gms.maps.SupportMapFragment"
+          class="com.google.android.gms.maps.SupportMapFragment"
+          map:cameraBearing="112.5"
+          map:cameraTargetLat="48.85568"
+          map:cameraTargetLng="2.346246"
+          map:cameraTilt="0"
+          map:cameraZoom="13"
+          map:mapType="normal"
+          map:uiCompass="true"
+          map:uiRotateGestures="true"
+          map:uiScrollGestures="true"
+          map:uiTiltGestures="false"
+          map:uiZoomControls="false"
+          map:uiZoomGestures="true" />
 
 </RelativeLayout>
