Cleaning up interface: moving actions to action bar, set 'return' icon, adding welcome screen and Toasts to inform user of current state

--- a/res/layout/map_infoview.xml
+++ b/res/layout/map_infoview.xml
@@ -52,7 +52,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:contentDescription="@string/refresh"
-            android:src="@drawable/stat_sys_download_anim5" />
+            android:src="@drawable/ic_menu_goto" />
 
     </LinearLayout>
 
