--- a/res/menu/maps.xml
+++ b/res/menu/maps.xml
@@ -1,9 +1,18 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android" 
+      xmlns:veliby="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_reload"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        veliby:showAsAction="always"
+        android:icon="@drawable/ic_menu_refresh"
+        android:title="@string/action_reload"/>
+
+    <item
+        android:id="@+id/action_mode"
+        android:orderInCategory="100"
+        veliby:showAsAction="always"
+        android:icon="@drawable/ic_menu_upload"
+        android:title="@string/action_mode"/>
 
 </menu>
