Complete refactoring into UI and Activity packages, as well as new UI around granular Station informations. Implementing Favorites selections and new Help button

--- a/res/menu/maps.xml
+++ b/res/menu/maps.xml
@@ -15,4 +15,11 @@
         android:icon="@drawable/ic_menu_upload"
         android:title="@string/action_mode"/>
 
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="100"
+        veliby:showAsAction="always"
+        android:icon="@drawable/ic_menu_help"
+        android:title="@string/action_help"/>
+
 </menu>
