--- a/res/layout/activity_maps.xml
+++ b/res/layout/activity_maps.xml
@@ -1,13 +1,13 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:id="@+id/mapsactivity_view"
     tools:context=".MapsActivity" >
 
     <fragment
@@ -28,8 +28,12 @@
           map:uiTiltGestures="false"
           map:uiZoomControls="false"
           map:uiZoomGestures="true" />
-<<<<<<< HEAD
-</LinearLayout>
-=======
-</LinearLayout>
->>>>>>> bd7a3b4b6ab15433f20e9bbb3fbaf2ff311f2542
+
+    <include
+         android:id="@+id/map_infoview"
+         android:visibility="gone"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_alignParentBottom="true"
+         layout="@layout/activity_stationinfo"/>
+</RelativeLayout>
