--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -7,4 +7,9 @@
     <dimen name="infoview_nbbikes">60sp</dimen>
     <dimen name="infoview_title">20sp</dimen>
 
+    <dimen name="widget_station_bikes">23sp</dimen>
+    <dimen name="widget_station_stands">23sp</dimen>
+    <dimen name="widget_station_title">23sp</dimen>
+    <dimen name="widget_station_intwidth">32sp</dimen>
+
 </resources>
