--- a/res/layout/widget_favstations.xml
+++ b/res/layout/widget_favstations.xml
@@ -39,13 +39,21 @@
             android:textSize="@dimen/widget_title"
             android:textColor="#FF666666" />
 
-        <ImageView
-            android:id="@+id/widget_menu_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:contentDescription="@string/action_reload"
-            android:src="@drawable/ic_menu_refresh" />
+        <LinearLayout
+		        android:id="@+id/widget_menu_bar_right"
+		        android:layout_width="match_parent"
+		        android:layout_height="match_parent"
+		        android:layout_gravity="right"
+		        android:gravity="right"
+		        android:orientation="horizontal">
+		        <ImageView
+		            android:id="@+id/widget_menu_refresh"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_gravity="right"
+		            android:contentDescription="@string/action_reload"
+		            android:src="@drawable/ic_menu_refresh" />            
+        </LinearLayout>
 		</LinearLayout>
 
     <LinearLayout
