--- a/res/layout/map_infoview.xml
+++ b/res/layout/map_infoview.xml
@@ -24,8 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:clickable="true" >
+        android:gravity="center_horizontal" >
 
       <ImageView
           android:id="@+id/infoview_bankimg"
