--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="infoview_somebikes">#FFff8a05</color>
     <color name="infoview_plentybikes">#FF99cc00</color>
 
+    <color name="menu_button_pressed">#FFBB7BB3</color>
+    <color name="menu_button_pressed_text">#FFFFFFFF</color>
+    <color name="veliby_purple">#FFA24694</color>
+    <color name="veliby_purple_light">#FFBB7BB3</color>
 </resources>
