--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -18,4 +18,24 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="MapsActivity_Menu_Button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/veliby_purple</item>
+        <item name="android:padding">7sp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="MapsActivity_Menu_Button.Pressed">
+        <item name="android:background">@color/menu_button_pressed</item>
+        <item name="android:textColor">@color/menu_button_pressed_text</item>
+    </style>
+
+    <style name="MapsActivity_Menu_Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">2dp</item>
+        <item name="android:background">@color/veliby_purple</item>
+        <item name="android:layout_margin">5sp</item>
+    </style>
 </resources>
