--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -38,4 +38,11 @@
         <item name="android:background">@color/veliby_purple</item>
         <item name="android:layout_margin">5sp</item>
     </style>
+
+    <style name="MapsActivity_Info_Divider">
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">1dp</item>
+        <item name="android:background">@color/veliby_purple_light</item>
+        <item name="android:layout_margin">5sp</item>
+    </style>
 </resources>
