--- a/res/layout/activity_maps.xml
+++ b/res/layout/activity_maps.xml
@@ -1,47 +1,64 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:id="@+id/mapsactivity_view"
-    tools:context=".MapsActivity" >
+    android:layout_height="match_parent">
 
-    <fragment
-          android:id="@+id/map"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:name="com.google.android.gms.maps.SupportMapFragment"
-          class="com.google.android.gms.maps.SupportMapFragment"
-          map:cameraBearing="0"
-          map:cameraTargetLat="48.85568"
-          map:cameraTargetLng="2.346246"
-          map:cameraTilt="0"
-          map:cameraZoom="13"
-          map:mapType="normal"
-          map:uiCompass="true"
-          map:uiRotateGestures="true"
-          map:uiScrollGestures="true"
-          map:uiTiltGestures="false"
-          map:uiZoomControls="false"
-          map:uiZoomGestures="true" />
+    <!-- The main content view -->
+		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		    xmlns:tools="http://schemas.android.com/tools"
+		    xmlns:map="http://schemas.android.com/apk/res-auto"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:paddingBottom="@dimen/activity_vertical_margin"
+		    android:paddingLeft="@dimen/activity_horizontal_margin"
+		    android:paddingRight="@dimen/activity_horizontal_margin"
+		    android:paddingTop="@dimen/activity_vertical_margin"
+		    android:id="@+id/mapsactivity_view"
+		    tools:context=".MapsActivity" >
+		
+		    <fragment
+		          android:id="@+id/map"
+		          android:layout_width="match_parent"
+		          android:layout_height="match_parent"
+		          android:name="com.google.android.gms.maps.SupportMapFragment"
+		          class="com.google.android.gms.maps.SupportMapFragment"
+		          map:cameraBearing="0"
+		          map:cameraTargetLat="48.85568"
+		          map:cameraTargetLng="2.346246"
+		          map:cameraTilt="0"
+		          map:cameraZoom="13"
+		          map:mapType="normal"
+		          map:uiCompass="true"
+		          map:uiRotateGestures="true"
+		          map:uiScrollGestures="true"
+		          map:uiTiltGestures="false"
+		          map:uiZoomControls="false"
+		          map:uiZoomGestures="true" />
+		
+		    <include
+		         android:id="@+id/map_stationinfo"
+		         android:visibility="gone"
+		         android:layout_width="match_parent"
+		         android:layout_height="wrap_content"
+		         android:layout_alignParentBottom="true"
+		         layout="@layout/activity_stationinfo"/>
+		
+		    <include
+		         android:id="@+id/map_menu"
+		         android:visibility="gone"
+		         android:layout_width="match_parent"
+		         android:layout_height="match_parent"
+		         android:layout_alignParentLeft="true"
+		         layout="@layout/activity_maps_menu_item"/>
+		</RelativeLayout>
 
-    <include
-         android:id="@+id/map_stationinfo"
-         android:visibility="gone"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_alignParentBottom="true"
-         layout="@layout/activity_stationinfo"/>
-
-    <include
-         android:id="@+id/map_menu"
-         android:visibility="gone"
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:layout_alignParentLeft="true"
-         layout="@layout/activity_maps_menu"/>
-</RelativeLayout>
+    <ListView android:id="@+id/mapsactivity_menu"
+        android:layout_width="230dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#DDFFFFFF" />
+</android.support.v4.widget.DrawerLayout>
