--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -22,19 +22,17 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:textColor">@color/veliby_purple</item>
+        <item name="android:textColor">@color/veliby_purple_light</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:padding">7sp</item>
         <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="MapsActivity_Menu_Button.Pressed">
-        <item name="android:background">@color/menu_button_pressed</item>
-        <item name="android:textColor">@color/menu_button_pressed_text</item>
     </style>
 
     <style name="MapsActivity_Menu_Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">2dp</item>
+        <item name="android:minHeight">2dp</item>
+        <item name="android:maxHeight">2dp</item>
         <item name="android:background">@color/veliby_purple</item>
         <item name="android:layout_margin">5sp</item>
     </style>
