--- a/res/layout/activity_maps.xml
+++ b/res/layout/activity_maps.xml
@@ -53,7 +53,7 @@
 		         layout="@layout/activity_maps_menu_item"/>
 		</RelativeLayout>
 
-    <ListView android:id="@+id/mapsactivity_menu"
+    <ExpandableListView android:id="@+id/mapsactivity_menu"
         android:layout_width="230dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
