--- a/res/drawable/activity_maps_menu_group.xml
+++ b/res/drawable/activity_maps_menu_group.xml
@@ -1,5 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_empty="true" android:drawable="@android:color/transparent"/>
+    <item android:state_empty="true"
+          android:state_expanded="true" android:drawable="@android:color/transparent"/>
     <item android:state_expanded="true" android:drawable="@drawable/ic_media_group_collapse" />
-    <item android:drawable="@drawable/ic_media_group_expand" />
+    <item android:state_expanded="false" android:drawable="@drawable/ic_media_group_expand" />
 </selector>
