--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -24,11 +24,16 @@
         <item name="android:gravity">center_vertical</item>
         <item name="android:textColor">@color/veliby_purple_light</item>
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:padding">7sp</item>
+        <item name="android:paddingLeft">7sp</item>
+        <item name="android:paddingRight">7sp</item>
+        <item name="android:paddingTop">7sp</item>
+        <item name="android:paddingBottom">7sp</item>
         <item name="android:textSize">18sp</item>
     </style>
     <style name="MapsActivity_Menu_Group" parent="@style/MapsActivity_Menu_Item">
-        <item name="android:paddingLeft">50sp</item>
+        <item name="android:paddingLeft">?android:attr/expandableListPreferredItemPaddingLeft</item>
+        <item name="android:background">#DDDADADA</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="MapsActivity_Menu_Divider">
