--- a/res/layout/widget_favstations_item.xml
+++ b/res/layout/widget_favstations_item.xml
@@ -57,6 +57,7 @@
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:includeFontPadding="false"
+        android:textColor="@android:color/primary_text_dark"
         android:singleLine="true"
         android:ellipsize="end" />
 
