--- a/veliby/src/main/res/layout/dialog_help.xml
+++ b/veliby/src/main/res/layout/dialog_help.xml
@@ -185,7 +185,7 @@
 	            android:layout_height="wrap_content"
 	            android:layout_weight="1"
 	            android:contentDescription="@string/welcome_mode_find"
-	            android:src="@drawable/ic_menu_upload" />
+	            android:src="@drawable/bikes" />
 	
 	        <TextView
 	            android:id="@+id/welcome_mode_find"
@@ -209,7 +209,7 @@
 	            android:layout_height="wrap_content"
 	            android:layout_weight="1"
 	            android:contentDescription="@string/welcome_mode_find"
-	            android:src="@drawable/ic_menu_goto" />
+	            android:src="@drawable/parking" />
 	
 	        <TextView
 	            android:id="@+id/welcome_mode_return"
@@ -220,58 +220,9 @@
 	            android:layout_width="0dp"
 	            android:layout_weight="8" />
 	    </LinearLayout>
-	    
 
-	    <LinearLayout
-	        android:id="@+id/infoview_row_bonus"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_marginTop="10dp" >
-	
-	        <ImageView
-	            android:id="@+id/infoview_bonusimg"
-	            android:layout_width="0dp"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:contentDescription="@string/refresh"
-	            android:src="@drawable/ic_input_add" />
-	
-	        <TextView
-	            android:id="@+id/infoview_bonus"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal"
-	            android:gravity="left"
-	            android:text="@string/infoview_bonus"
-	            android:layout_width="0dp"
-	            android:layout_weight="8" />
-	    </LinearLayout>
-	
-	    <LinearLayout
-	        android:id="@+id/infoview_row_bank"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_marginTop="10dp"
-	        android:layout_marginBottom="10dp" >
-	
-	        <ImageView
-	            android:id="@+id/infoview_bankimg"
-	            android:layout_width="0dp"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="1"
-	            android:contentDescription="@string/refresh"
-	            android:src="@drawable/ic_coins_l" />
-	
-	        <TextView
-	            android:id="@+id/infoview_bank"
-	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal"
-	            android:gravity="left"
-	            android:text="@string/infoview_bank"
-	            android:layout_width="0dp"
-	            android:layout_weight="8" />
-	    </LinearLayout>
-  
-      <LinearLayout
+
+        <LinearLayout
           android:id="@+id/infoview_row_unfaved"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
