--- a/veliby/src/main/res/layout/widget_favstations_item.xml
+++ b/veliby/src/main/res/layout/widget_favstations_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:contentDescription="@string/action_mode_find"
-        android:src="@drawable/ic_menu_upload" />
+        android:src="@drawable/bikes" />
 
     <TextView
         android:id="@+id/widget_station_bikes"
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:contentDescription="@string/action_mode_return"
-        android:src="@drawable/ic_menu_goto" />
+        android:src="@drawable/parking" />
 
     <TextView
         android:id="@+id/widget_station_stands"
@@ -57,7 +57,7 @@
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:includeFontPadding="false"
-        android:textColor="@android:color/primary_text_dark"
+        android:textColor="@android:color/widget_edittext_dark"
         android:singleLine="true"
         android:ellipsize="end" />
 
