--- a/veliby/src/main/res/xml/analytics_tracker.xml
+++ b/veliby/src/main/res/xml/analytics_tracker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- End current session if app sleeps for a period of time -->
     <integer name="ga_sessionTimeout">300</integer>
 
     <!-- Enable automatic Activity measurement -->
@@ -9,9 +10,12 @@
     <screenName name="com.licryle.veliby.MapsActivity">
         Veliby MapsActivity
     </screenName>
-    <screenName name="com.licryle.veliby.FavStationWidget.ViewsFactory">
-        Veliby Widget
-    </screenName>
-    <!--  The following value should be replaced with correct property id. -->
+
+    <!--  The property id associated with this analytics tracker -->
     <string name="ga_trackingId">UA-1717150-13</string>
+
+    <!--
+      See Project Structure -> Analytics -> Google Analytics -> Learn More
+      to learn more about configuring this file.
+    -->
 </resources>
